[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multipart-response"
version = "0.3.0"
description = "Stream one HTTP response as multiple parts. For Django, FastAPI, and Starlette."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Christian Tanul", email = "git@christiantanul.com" },
]
keywords = ["multipart", "streaming", "http", "response", "django", "fastapi", "starlette", "htmx"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
starlette = ["starlette>=0.37.2"]
fastapi = ["fastapi>=0.134.0"]
django = [
    "django>=4.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.7",
    "fastapi>=0.134.0",
    "httpx>=0.27.0",
    "httpx2>=2.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.0",
    "starlette>=0.37.2",
]

[project.urls]
Homepage = "https://github.com/scriptogre/multipart-response"
Issues = "https://github.com/scriptogre/multipart-response/issues"
Source = "https://github.com/scriptogre/multipart-response"

[tool.hatch.build.targets.wheel]
packages = ["src/multipart_response"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=multipart_response --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF100"]

[tool.ruff.lint.isort]
combine-as-imports = true
